--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: balancedtrees
 description: A collections of AVL and BPlus tree
 version: 0.0.1
-author:
-homepage:
+author: Anurag Vohra<anuragvohraec@gmail.com>
+homepage: https://github.com/anuragvohraec/balancedtrees.git
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
